WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
301017
REGRESSION(
297117@main
): Active annotation hover effect sticks around after moving pointer away
https://bugs.webkit.org/show_bug.cgi?id=301017
Summary
REGRESSION(297117@main): Active annotation hover effect sticks around after m...
Abrar Rahman Protyasha
Reported
2025-10-17 15:49:42 PDT
rdar://162799398
Attachments
Add attachment
proposed patch, testcase, etc.
Abrar Rahman Protyasha
Comment 1
2025-10-18 15:51:30 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/52621
EWS
Comment 2
2025-10-18 18:17:56 PDT
Committed
301780@main
(58e3c06728ff): <
https://commits.webkit.org/301780@main
> Reviewed commits have been landed. Closing PR #52621 and removing active labels.
EWS
Comment 3
2025-10-18 21:30:27 PDT
Committed
301765.3@safari-7623-branch
(f7488cae5a65): <
https://commits.webkit.org/301765.3@safari-7623-branch
> Reviewed commits have been landed. Closing PR #3801 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug