REGRESSION(297117@main): Active annotation hover effect sticks around after moving pointer away https://bugs.webkit.org/show_bug.cgi?id=301017 rdar://162799398

Reviewed by Wenson Hsieh.

In 297117@main, we started using protectedTrackedAnnotation() from the
annotation tracking state, rather than retaining a pointer to this
tracked annotation and reading from that.

This is OK usually, but AnnotationTrackingState::finishAnnotationTracking
clears out the tracked annotation, so later, we incorrectly specify
repaint requirements for the previously tracked annotation.

We fix this bug by holding on to the previously tracked annotation
rather than keying off of annotation tracking state, which
understandably does not guarantee the right state when in its "finish"
path.

Test: TestWebKitAPI.UnifiedPDF.TextAnnotationHoverEffect

* Source/WebKit/WebProcess/Plugins/PDF/UnifiedPDF/UnifiedPDFPlugin.mm:
(WebKit::UnifiedPDFPlugin::finishTrackingAnnotation):
(WebKit::AnnotationTrackingState::finishAnnotationTracking):
* Tools/TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
* Tools/TestWebKitAPI/Tests/WebKitCocoa/UnifiedPDFTests.mm:
(TestWebKitAPI::UNIFIED_PDF_TEST):

Canonical link: https://commits.webkit.org/301780@main